Updated cv content

--- a/index.html
+++ b/index.html
@@ -1,65 +1,152 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-	<title></title>
+	<meta charset="UTF-8">
+	<title>Jade Shearstone CV | Resume | Experience | Skills</title>
+
+	<link rel="stylesheet" type="text/css" href="http://necolas.github.io/normalize.css/3.0.1/normalize.css">
+	<link href='http://fonts.googleapis.com/css?family=Droid+Sans:400,700' rel='stylesheet' type='text/css'>
+	<link href='http://fonts.googleapis.com/css?family=Codystar' rel='stylesheet' type='text/css'>
+	<link rel="stylesheet" type="text/css" href="css/main.css">
+	<!--link to google analytics-->
 </head>
+
 <body>
-	<ul> 
-		<li><a href="#">about</a></li> 
-		<li><a href="#">education</a></li> 
-		<li><a href="#">work</a></li> 
-		<li><a href="#">skills</a></li> 
-		<li><a href="#">contact</a></li> 
-	</ul> 
+	<div class="page_wrap">
+		<section class="header">
+			<h1>jade shearstone</h1>
+		</section>
 
-	<h1></h1>
+	<div class="left">
+		<section class="about">
+			<div>
+				<h2>about me</h2>
+			</div>
+			<div>
+				<p>hello, i'm jade & i'm learning web design. i love simple, clean & user friendly interfaces. i'm a thinker & a creator who wants to make a difference today so the world can be a better place tomorrow.</p>
+			</div>
+		</section>
 
-	<h2>about me</h2>
-		<div>
-			<p></p>
-		</div>
+		<section class="education">
+			<div>
+				<h2>my education</h2>
+			</div>
+			<div class="design">
+				<h3>web design</h3>
+				<h4>
+					yoobee school of design
+					<span>2014</span>
+				</h4>
+			</div>
+			<div class="arts">
+				<h3>bachelor of arts</h3>
+				<h4>
+					university of auckland
+					<span>2011</span>
+				</h4>
+			</div>
+		</section>
 
-	<h2>what i've studied</h2>
-		<div>
-			<p>web design</p>
-			<p>yoobee school of design</p>
-			<p>2014</p>
-		</div>
-		<div>
-			<p>bachelor of arts</p>
-			<p>university of auckland</p>
-			<p>2011</p>
-		</div>
+		<section class="skills">
+			<div>
+				<h2>what i can do</h2>
+			</div>
+			<div>
+				<ul>
+					<li>
+						communicate
+						<span></span>
+					</li>
+					<li>
+						manage projects
+						<span></span>
+					</li>
+					<li>
+						html & css
+						<span></span>
+					</li>
+					<li></li>
+					<li>
+						javascript
+						<span></span>
+					</li>
+					<li>
+						photoshop
+						<span></span>
+					</li>
+				</ul>
+			</div>
+		</section>
+	</div>
 
-	<h2>where i've worked</h2>
-		<div>
-			<p>air new zealand</p>
-			<p>project coordinator</p>
-		</div>
-		<div>
-			<p>xero</p>
-			<p>recruitment projects</p>
-			<p>events coordinator</p>
-			<p>recruitment consultant</p>
-		</div>
-		<div>
-			<p>locog</p>
-			<p>vcc manager</p>
-			<p>recruitment advisor</p>
-		</div>
-		<div>
-			<p>numero</p>
-			<p>recruitment consultant</p>
-		</div>
+	<div class="right">
+		<section class="work">
+			<div>
+				<h2>where i've worked</h2>
+			</div>
+			<div class="airnz">
+				<h3><a href="http://www.airnewzealand.co.nz/corporate-profile" target="_blank">air new zealand</a></h3>
+				<h4>
+					project coordinator
+					<span>feb 14 - may 14</span>
+				</h4>
+				<p>a fixed term contract working on a procurement project to implement a new purchasing process across the whole business for simplification, cost savings & vendor reduction.</p>
+			</div>
+			<div class="xero">
+				<h3><a href="http://www.xero.com/about/" target="_blank">xero</a></h3>
+				<h4>
+					recruitment projects
+					<span>sep 13 - dec 13</span>
+				</h4>
+				<h4>
+					events coordinator
+					<span>may 13 - aug 13</span>
+				</h4>
+				<h4>
+					recruitment consultant
+					<span>dec 12 - apr 13</span>
+				</h4>
+				<p>write something here...</p>
+			</div>
+			<div class="locog">
+				<h3><a href="http://www.olympic.org/london-2012-summer-olympics" target="_blank">locog</a></h3>
+				<h4>
+					vcc manager
+					<span>feb 12 - sep 12</span>
+				</h4>
+				<h4>
+					recruitment advisor
+					<span>sep 11 - apr 12</span>
+				</h4>
+				<p>write something here...</p>
+			</div>
+			<div class="numero">
+				<h3><a href="http://www.numero.co.nz/" target="_blank">numero</a></h3>
+				<h4>
+					recruitment consultant
+					<span>mar 08 - mar 11</span>
+				</h4>
+				<p>write something here...</p>
+			</div>
+		</section>
+	</div>
 
-	<h2>what i can do</h2>
-		<div>
-			<p></p>
-		</div>
-
-	<h2>say hello</h2>
-		<div>
-			<p>if you would like to work with me or just fancy a coffee and a yarn choose your preference below and get in touch, i'd love to hear from you!</p>
-		</div>
+		<footer class="contact">
+			<div class="hello">
+				<h2>don't be shy, say hello</h2>
+			</div>
+			<div>
+				<p>if you would like to work with me, or just fancy a coffee & a yarn, choose your preference below & get in touch. i'd love to hear from you!</p>
+			</div>
+			<!--update icon images-->
+			<ul class="icons">
+				<li><a href="mailto:shearstone.jade@gmail.com?Subject=Hello%20Jade" target="_top"><img src="images/mail.png"></a></li>
+				<li><a href="http://nz.linkedin.com/in/jadeshearstone/" target="_blank"><img src="images/linkedin.png"></a></li>
+				<li><a href="https://twitter.com/jadeshearstone" target="_blank"><img src="images/twitter.png"></a></li>
+				<li><a href="https://github.com/JadeCodes" target="_blank"><img src="images/github.png"></a></li>
+			</ul>
+		</footer>
+	</div>
 </body>
-<html>
+</html>
