Responsive updates made

--- a/index.html
+++ b/index.html
@@ -66,8 +66,13 @@
 				<div>
 					<h2>what i can do</h2>
 				</div>
-				<div>
+				<!--This image will only show on a screen width greater than 725px-->
+				<div id="infographic">
 					<img src="images/skills.png">
+				</div>
+				<!--This image will only show on a screen width less than 725px-->
+				<div id="mobile">
+					<img src="images/skills-small.png">
 				</div>
 			</section>
 		</div>
