--- a/index.html
+++ b/index.html
@@ -1,28 +1,32 @@
 <!DOCTYPE html>
 <html>
-
+<!--welcome to my online cv - project one for web design bootcamp at yoobee school of design-->
 <head>
 	<meta charset="UTF-8">
+
+	<!--code for responsive design-->
 	<meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 	<meta name="HandheldFriendly" content="true">
 
 	<title>Jade Shearstone CV | Resume | Experience | Skills</title>
 
+	<!--styling and fonts-->
 	<link rel="stylesheet" type="text/css" href="http://necolas.github.io/normalize.css/3.0.1/normalize.css">
 	<link href='http://fonts.googleapis.com/css?family=Droid+Sans:400,700' rel='stylesheet' type='text/css'>
 	<link href='http://fonts.googleapis.com/css?family=Codystar' rel='stylesheet' type='text/css'>
 	<link rel="stylesheet" type="text/css" href="css/main.css">
 	<link rel="stylesheet" type="text/css" href="css/hover.css">
 	
+	<!--google analytics-->
 	<script>
-  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+  	(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  	(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+ 	 m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+ 	 })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
-  ga('create', 'UA-51275489-1', 'jadeshearstone.com');
-  ga('send', 'pageview');
+ 	 ga('create', 'UA-51275489-1', 'jadeshearstone.com');
+ 	 ga('send', 'pageview');
 	</script>
 </head>
 
@@ -34,100 +38,98 @@
 
 		<div class="left">
 			<section class="about">
-				<div>
-					<h2>about me</h2>
-				</div>
-				<div>
-					<p id="hello">hello, i'm jade & i'm learning web design. i love simple, clean & user friendly interfaces. <br></br> i'm a thinker & a creator who wants to make a difference today so the world can be a better place tomorrow.</p>
-				</div>
+				<h2>about me</h2>
+					<div>
+						<p>
+							hello, i'm jade & i'm learning web design. i love simple, clean & user friendly interfaces. <br></br> i'm a thinker & a creator who wants to make a difference today so the world can be a better place tomorrow.
+						</p>
+					</div>
 			</section>
 
 			<section class="education">
-				<div>
-					<h2>my education</h2>
-				</div>
-				<div class="design">
-					<h3>web design</h3>
-					<h4>
-						<a href="http://www.yoobee.ac.nz/general/content/about-yoobee.html" target="_blank" class="skew">yoobee school of design</a>
-						<span>2014</span>
-					</h4>
-				</div>
-				<div class="arts">
-					<h3>bachelor of arts</h3>
-					<h4>
-						<a href="https://www.auckland.ac.nz/en/about/the-university.html" target="_blank" class="skew">university of auckland</a>
-						<span>2011</span>
-					</h4>
-				</div>
+				<h2>my education</h2>
+					<div class="design">
+						<h3>web design</h3>
+						<h4>
+							<a href="http://www.yoobee.ac.nz/general/content/about-yoobee.html" target="_blank" class="skew">yoobee school of design</a>
+							<span>2014</span>
+						</h4>
+					</div>
+					<div class="arts">
+						<h3>bachelor of arts</h3>
+						<h4>
+							<a href="https://www.auckland.ac.nz/en/about/the-university.html" target="_blank" class="skew">university of auckland</a>
+							<span>2011</span>
+						</h4>
+					</div>
 			</section>
 
 			<section class="skills">
-				<div>
-					<h2>what i can do</h2>
-				</div>
+				<h2>what i can do</h2>
 				<!--This image will only show on a screen width greater than 725px-->
-				<div id="infographic">
-					<img src="images/skills.png">
-				</div>
+					<div id="infographic">
+						<img src="images/skills.png">
+					</div>
 				<!--This image will only show on a screen width less than 725px-->
-				<div id="mobile">
-					<img src="images/skills-small.png">
-				</div>
+					<div id="mobile">
+						<img src="images/skills-small.png">
+					</div>
 			</section>
 		</div>
 
 		<div class="right">
 			<section class="work">
-				<div>
-					<h2>where i've worked</h2>
-				</div>
-				<div class="airnz">
-					<h3 class="grow"><a href="http://www.airnewzealand.co.nz/corporate-profile" target="_blank">air new zealand</a></h3>
-					<h4>
-						project coordinator
-						<span>feb 14 - may 14</span>
-					</h4>
-						<p>this was a fixed term contract working on a procurement project to implement a new purchasing process across the whole business for simplification, cost savings & vendor reduction.</p>
-				</div>
-				<div class="xero">
-					<h3 class="grow"><a href="http://www.xero.com/about/" target="_blank">xero</a></h3>
-					<h4>
-						recruitment projects
-						<span>sep 13 - dec 13</span>
-					</h4>
-					<h4>
-						events coordinator
-						<span>may 13 - aug 13</span>
-					</h4>
-					<h4>
-						recruitment consultant
-						<span>dec 12 - apr 13</span>
-					</h4>
-						<p>i recruited for design, marketing, sales, training, finance & development teams across new zealand & australia. i also supported the australian sales team with events across the country & our annual conference, xerocon.</p>
-				</div>
-				<div class="locog">
-					<h3 class="grow"><a href="http://www.olympic.org/london-2012-summer-olympics" target="_blank">locog</a></h3>
-					<h4>
-						vcc manager
-						<span>feb 12 - sep 12</span>
-					</h4>
-					<h4>
-						recruitment advisor
-						<span>sep 11 - apr 12</span>
-					</h4>
-						<p>i helped recruit the paid workforce for the london 2012 olympic & paralympic games. in the lead up & during games time i managed the opertional communication centres for the aquatic test events & at greenwich park for equstrian & modern pentathlon.</p>
-				</div>
+				<h2>where i've worked</h2>
+					<div class="airnz">
+						<h3 class="grow"><a href="http://www.airnewzealand.co.nz/corporate-profile" target="_blank">air new zealand</a></h3>
+						<h4>
+							project coordinator
+							<span>feb 14 - may 14</span>
+						</h4>
+							<p>
+								this was a fixed term contract working on a procurement project to implement a new purchasing process across the whole business for simplification, cost savings & vendor reduction.
+							</p>
+					</div>
+					<div class="xero">
+						<h3 class="grow"><a href="http://www.xero.com/about/" target="_blank">xero</a></h3>
+						<h4>
+							recruitment projects
+							<span>sep 13 - dec 13</span>
+						</h4>
+						<h4>
+							events coordinator
+							<span>may 13 - aug 13</span>
+						</h4>
+						<h4>
+							recruitment consultant
+							<span>dec 12 - apr 13</span>
+						</h4>
+							<p>
+								i recruited for design, marketing, sales, training, finance & development teams across new zealand & australia. i also supported the australian sales team with events across the country & our annual conference, xerocon.
+							</p>
+					</div>
+					<div class="locog">
+						<h3 class="grow"><a href="http://www.olympic.org/london-2012-summer-olympics" target="_blank">locog</a></h3>
+						<h4>
+							vcc manager
+							<span>feb 12 - sep 12</span>
+						</h4>
+						<h4>
+							recruitment advisor
+							<span>sep 11 - apr 12</span>
+						</h4>
+							<p>
+								i helped recruit the paid workforce for the london 2012 olympic & paralympic games. in the lead up & during games time i managed the operational communication centres for the aquatic test events & at greenwich park for equstrian & modern pentathlon.
+							</p>
+					</div>
 			</section>
 		</div>
 
 		<footer class="contact">
-			<div class="hello">
-				<h2>don't be shy, say hello</h2>
-			</div>
-			<div>
-				<p>if you would like to work with me, or just fancy a coffee & a chat, choose your preference below & get in touch. i'd love to hear from you!</p>
-			</div>
+			<h2>don't be shy, say hello</h2>
+				<p>
+					if you would like to work with me, or just fancy a coffee & a chat, choose your preference below & get in touch. i'd love to hear from you!
+				</p>
 				<ul class="icons">
 					<li class="sink"><a href="mailto:shearstone.jade@gmail.com?Subject=Hello%20Jade" target="_top"><img src="images/mail.png"></a></li>
 					<li class="sink"><a href="http://nz.linkedin.com/in/jadeshearstone/" target="_blank"><img src="images/linkedin.png"></a></li>
