Spelling mistake fix

--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
 							<span>sep 11 - apr 12</span>
 						</h4>
 							<p>
-								i helped recruit the paid workforce for the london 2012 olympic & paralympic games. in the lead up & during games time i managed the operational communication centres for the aquatic test events & at greenwich park for equstrian & modern pentathlon.
+								i helped recruit the paid workforce for the london 2012 olympic & paralympic games. in the lead up & during games time i managed the operational communication centres for the aquatic test events & at greenwich park for equestrian & modern pentathlon.
 							</p>
 					</div>
 			</section>
