Validation error fix

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
 	<!--code for responsive design-->
 	<meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no">
-	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+	<!-- <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"> -->
 	<meta name="HandheldFriendly" content="true">
 
 	<title>Jade Shearstone CV | Resume | Experience | Skills</title>
@@ -41,7 +41,7 @@
 				<h2>about me</h2>
 					<div>
 						<p>
-							hello, i'm jade & i'm learning web design. i love simple, clean & user friendly interfaces. <br></br> i'm a thinker & a creator who wants to make a difference today so the world can be a better place tomorrow.
+							hello, i'm jade & i'm learning web design. i love simple, clean & user friendly interfaces. <br> i'm a thinker & a creator who wants to make a difference today so the world can be a better place tomorrow.
 						</p>
 					</div>
 			</section>
@@ -68,11 +68,11 @@
 				<h2>what i can do</h2>
 				<!--This image will only show on a screen width greater than 725px-->
 					<div id="infographic">
-						<img src="images/skills.png">
+						<img src="images/skills.png" alt="Skills Infographic">
 					</div>
 				<!--This image will only show on a screen width less than 725px-->
 					<div id="mobile">
-						<img src="images/skills-small.png">
+						<img src="images/skills-small.png" alt="Skills Infographic">
 					</div>
 			</section>
 		</div>
@@ -131,10 +131,10 @@
 					if you would like to work with me, or just fancy a coffee & a chat, choose your preference below & get in touch. i'd love to hear from you!
 				</p>
 				<ul class="icons">
-					<li class="sink"><a href="mailto:shearstone.jade@gmail.com?Subject=Hello%20Jade" target="_top"><img src="images/mail.png"></a></li>
-					<li class="sink"><a href="http://nz.linkedin.com/in/jadeshearstone/" target="_blank"><img src="images/linkedin.png"></a></li>
-					<li class="sink"><a href="https://twitter.com/jadeshearstone" target="_blank"><img src="images/twitter.png"></a></li>
-					<li class="sink"><a href="https://github.com/JadeCodes" target="_blank"><img src="images/github.png"></a></li>
+					<li class="sink"><a href="mailto:shearstone.jade@gmail.com?Subject=Hello%20Jade" target="_top"><img src="images/mail.png" alt="Email"></a></li>
+					<li class="sink"><a href="http://nz.linkedin.com/in/jadeshearstone/" target="_blank"><img src="images/linkedin.png" alt="LinkedIn"></a></li>
+					<li class="sink"><a href="https://twitter.com/jadeshearstone" target="_blank"><img src="images/twitter.png" alt="Twitter"></a></li>
+					<li class="sink"><a href="https://github.com/JadeCodes" target="_blank"><img src="images/github.png" alt="GitHub"></a></li>
 				</ul>
 		</footer>
 	</div>
